// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer should return state after edit code 1`] = `
Object {
  "currentFile": "",
  "error": null,
  "isEdited": true,
}
`;

exports[`reducer should return state after file delete failure 1`] = `
Object {
  "currentFile": "",
  "error": null,
}
`;

exports[`reducer should return state after file open failure 1`] = `
Object {
  "currentFile": "",
  "error": "open error",
}
`;

exports[`reducer should return state after file open success 1`] = `
Object {
  "currentFile": undefined,
  "error": null,
  "isEdited": false,
}
`;

exports[`reducer should return state after file save failure 1`] = `
Object {
  "currentFile": "",
  "error": "save error",
}
`;

exports[`reducer should return state after file save success 1`] = `
Object {
  "currentFile": undefined,
  "error": null,
  "isEdited": false,
}
`;

exports[`reducer should return the initial state 1`] = `
Object {
  "currentFile": "",
  "error": null,
}
`;
